src/App.css
/* import './styles/audioplayer.css'; */

html, body, #root, .main {
  height: 100%;
  width: 100%;
  margin: 0px;
  min-width: 1024px;
  min-height: 850px;
}

.main {
  box-sizing: border-box;
}

/* HOMEPAGE */

.homepage-container {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: black;
  font-size: 16px;
  position: relative;
}

.dropdown-top {
  position: absolute;
  height: 95%;
  width: 90%;
  top: -100%;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  text-align: center;
  z-index: 5;
  transition: top 300ms linear;

  border: 1px solid orange;
  border-top: none;
  color: white;
  background-color: black;
  border-radius: 0 0 15px 15px;

  display: flex;
  flex-direction: column;
  align-items: center;
}
.modal-on {
  top: 0px;
  transition: top 400ms linear;
}

.photo-grid {
  display: grid;
  grid-template-columns: repeat(4, 25%);
  grid-template-rows: repeat(4, 25%);

  height: 90%;
  width: 90%;
  border: 1px dashed orange;

  position: relative;
}
.photo-square .photo {
  max-width: 100%;
  max-height: 100%;
}
.photo-square .photo:hover {
  transform: scale(1.03);
  filter: blur(1px);
}

.close-modal-btn {
  text-align: center;
  width: 4rem;
  height: 2rem;
  border: 1px solid orange;
  background-color: black;
  color: white;
  border-radius: 5px;
  transition: all 200ms ease;
}
.close-modal-btn:hover {
  cursor: pointer;
  transform: scale(1.1);
  background-color: orange;
  color: black;
  transition: all 200ms ease;
}

.dropdown-right {
  position: absolute;
  right: -50%;
  max-height: 100vh;
  width: 35%;
  margin-top: auto;
  margin-bottom: auto;
  top: 0;
  bottom: 0;
  border-left: 1px solid white;
  background-color: black;
  z-index: 3;
  transition: right 400ms ease;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.shop-on {
  right: 0;
  transition: right 400ms linear;
}

.shop {
  height: 80%;
  width: 80%;
  display: flex;
  align-items: center;
  flex-direction: column;
  border: 1px dashed olivedrab;
  overflow: scroll;
}

.shop-item {
  font-size: 24px;
  min-height: 300px;
  width: 300px;
  background-color: blueviolet;
  color: white;
  margin: 10px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.shop-item:hover {
  transform: scale(1.05);
}

.panel-container {
  height: 80%;
  width: 100%;
  padding: 0 10%;
  position: relative;
  z-index: 1;
}

.homepage-container:hover .placeholder-hover {
  opacity: 0;
  z-index: -1;
  transition: z-index 200ms step-end, opacity 300ms ease;
}

.placeholder-hover {
  position: absolute;
  z-index: 5;
  font-size: 10rem;
  color: orangered;
  text-shadow: 0 0 100px orangered;
  height: 100%;
  width: 80%;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  opacity: 1;
  transition: opacity 1s ease;
}

.panels {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.pane {
  height: 100%;
  width: 20rem;
  margin: 5px;
  border: 2px solid whitesmoke;
  border-radius: 5px;
  background-color: black;
  font-family: sans-serif;
  color: plum;
  position: relative;
  transition: all 500ms ease;
}

.pane:hover {
  transform: scale(1.05);
  transition: 500ms ease;
}

.pane-content {
  background: rgba(0, 0, 0, 0);
  height: 100%;
  width: 100%;
}

.pane:hover .pane-content {
  background: linear-gradient(0deg, rgba(19, 19, 19, 1) 0%, rgba(0,0,0,1) 50%);
  transition: background 300ms ease;
}

.pane-title, .pane-body {
  margin-left: 5px;
}

.pane-title {
  position: absolute;
  bottom: 0;
  left: 30%;
  margin-bottom: 5px;
  font-size: 2.5rem;
  -webkit-font-smoothing: antialiased;
}

.pane:hover .pane-title {
  left: 0;
  bottom: 70%;
  transition: left 1.5s ease, 
    bottom 1000ms ease 1.5s;
}

.pane-body {
  color: plum;
  opacity: 0;
  position: absolute;
  bottom: 10px;
}

.pane:hover .pane-body {
  opacity: 1;
  bottom: 30%;
  transition: bottom 1s ease 1.5s,
    opacity 1s ease 2s;
}

.photo-big {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  top: 0;
  left: 0;
  right: 0;
  max-width: 100%;
  max-height: 100%;
}


/* 
.artwork {
  object-fit: fill;
}

.art {
  height: 200px;
  width: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 14px;
  font-weight: 400;
  border: 1px dotted rgb(221, 133, 18);
}

.pound-logo {
  position: absolute;
  height: 200px;
  width: auto;
  opacity: 1;
}

.ep-logo {
  height: 200px;
  width: auto;
  opacity: 0;
}

.title {
  opacity: 0;
  font-family: monospace;
}

.art:hover .title {
  opacity: 1;
  color: white;
  transition: 10s;
}

.art:hover .pound-log {
  opacity: 0;
  transition: 5s;
}

.art:hover .ep-logo {
  opacity: 1;
  transition: 5s;
} */

